// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Address should not render without address 1`] = `
<div>
  <div
    class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap space-x-2"
  />
</div>
`;

exports[`Formatted Address should render address only 1`] = `
<div>
  <div
    class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap space-x-2"
  >
    <span
      class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with normal font 1`] = `
<div>
  <div
    class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap space-x-2"
  >
    <span
      class="font-normal text-base text-theme-text"
      data-testid="Address__alias"
    >
      <span
        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-normal text-base"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet name 1`] = `
<div>
  <div
    class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap space-x-2"
  >
    <span
      class="font-semibold text-base text-theme-text"
      data-testid="Address__alias"
    >
      <span
        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;
